# async-resource-rs

./: Cargo.toml
arp/: Cargo.toml
arp-channel/: Cargo.toml
arp-channel/benches/: dropshot.rs  mpsc.rs  option_lock.rs
arp-channel/src/: drain.rs  dropshot.rs  lib.rs  mpsc.rs  option_lock.rs  thread_waker.rs  waker.rs
arp-channel/src/mpsc/: drain.rs  mod.rs
arp/src/: acquire.rs  config.rs  error.rs  lib.rs  managed.rs  pool.rs  queue.rs  sentinel.rs  wait.rs  waker.rs
arp/src/pool/: acquire.rs  config.rs  executor.rs  mod.rs  sentinel.rs  wait.rs
arp/src/resource/: lifecycle.rs  lock.rs  managed.rs  mod.rs  operation.rs
arp/src/shared/: mod.rs  waker.rs
arp/src/util/: mod.rs
arp/tests/: pool.rs
async-resource/: Cargo.toml
async-resource/src/: lib.rs
async-resource/src/executor/: bounded.rs  global.rs  mod.rs
async-resource/src/pool/: acquire.rs  config.rs  error.rs  executor.rs  mod.rs  operation.rs  pool.rs  wait.rs
async-resource/src/resource/: lock.rs  managed.rs  mod.rs
async-resource/src/shared/: mod.rs
async-resource/src/util/: dropshot.rs  injector.rs  mod.rs  option_lock.rs  thread.rs  thread_waker.rs
async-resource/tests/: pool.rs
async-resource/tests/utils/: mod.rs
dropshot/: Cargo.toml  README.md
dropshot/benches/: telephone.rs
dropshot/src/: lib.rs
option-lock/: Cargo.toml  README.md
option-lock/benches/: contention.rs
option-lock/examples/: atomic-wake.rs  sync-results.rs  try-mutex.rs
option-lock/src/: lib.rs  lock.rs  once.rs
option-lock/tests/: cover.rs
suspend/: Cargo.toml  README.md
suspend/benches/: block_on.rs  channel_many.rs  channel_telephone.rs  oneshot_send.rs  oneshot_thread.rs  telephone.rs
suspend/examples/: suspend.rs
suspend/src/: async_stream.rs  channel.rs  core.rs  helpers.rs  iter.rs  lib.rs  notify.rs  oneshot.rs  task.rs  thread.rs  util.rs  waker.rs
suspend/src/waker/: internal.rs  local.rs  mod.rs  null.rs
suspend/tests/: async_stream.rs  channel.rs  clone_waker.rs  cover.rs  iter.rs  oneshot.rs  send_once.rs  task_iter.rs  waker.rs
suspend/tests/utils/: mod.rs
