[package]
name = "async-resource"
version = "0.1.0"
authors = ["Andrew Whitehead <cywolf@gmail.com>"]
edition = "2018"
description = "Async resource pool"
license = "MIT/Apache-2.0"
#readme = "README.md"
repository = "https://github.com/andrewwhitehead/async-resource-rs/"
keywords = ["async", "resource", "pool"]

[lib]
name = "async_resource"
path = "src/lib.rs"

[features]
default = ["exec-multitask"]
exec-multitask = ["multitask"]

[dependencies]
concurrent-queue = "1.1"
futures-util = "0.3"
multitask = { version = "0.2", optional = true }
option-lock = { version = "0.1", path = "../option-lock" }

[dev-dependencies]
criterion = "0.3"
futures-channel = "0.3"  # temp for bench only
futures-executor = "0.3"
