[package]
name = "async-resource"
version = "0.1.0"
authors = ["Andrew Whitehead <cywolf@gmail.com>"]
edition = "2018"
description = "Async resource pool"
license = "MIT/Apache-2.0"
#readme = "README.md"
repository = "https://github.com/andrewwhitehead/async-resource-rs/"
keywords = ["async", "resource", "pool"]

[lib]
name = "async_resource"
path = "src/lib.rs"

[features]
default = ["default-exec"]
default-exec = ["bounded-exec"]
bounded-exec = ["async-executor", "event-listener"]

[dependencies]
async-executor = { version = "1.0", optional = true }
concurrent-queue = "1.1"
event-listener = { version = "2.4", optional = true }
futures-lite = "1.4"
option-lock = { version = "0.1", path = "../option-lock" }
suspend = { version = "0.1.4", path = "../suspend" }

[dev-dependencies]
criterion = "0.3"
