[package]
name = "dropshot"
version = "0.1.0"
authors = ["Andrew Whitehead <cywolf@gmail.com>"]
edition = "2018"
description = "A single-message asynchronous channel"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/andrewwhitehead/async-resource-rs/"
categories = ["concurrency", "data-structures"]
keywords = ["oneshot"]

[lib]
name = "dropshot"
path = "src/lib.rs"

[dependencies]
suspend = { "version" = "0.1", "path" = "../suspend" }

[dev-dependencies]
criterion = "0.3"
futures-channel = "0.3"
futures-executor = "0.3"
futures-util = "0.3"

[[bench]]
name = "telephone"
harness = false
