[package]
name = "option-lock"
version = "0.1.0"
authors = ["Andrew Whitehead <cywolf@gmail.com>"]
edition = "2018"

description = "A multi-purpose read-write lock for Option types"
license = "MIT/Apache-2.0"

[lib]
name = "option_lock"
path = "src/lib.rs"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "contention"
harness = false
