[package]
name = "option-lock"
version = "0.1.1"
authors = ["Andrew Whitehead <cywolf@gmail.com>"]
edition = "2018"
description = "A multi-purpose read/write lock for Option values"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/andrewwhitehead/async-resource-rs/"
categories = ["concurrency", "data-structures", "no-std"]
keywords = ["atomic", "option", "lock", "take"]

[lib]
name = "option_lock"
path = "src/lib.rs"

[features]
default = ["std"]
std = []

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "contention"
harness = false

[[example]]
name = "atomic-wake"
