[package]
name = "option-lock"
version = "0.2.0"
authors = ["Andrew Whitehead <cywolf@gmail.com>"]
edition = "2018"
description = "A multi-purpose read/write lock for Option values"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/andrewwhitehead/async-resource-rs/"
categories = ["concurrency", "data-structures", "no-std"]
keywords = ["atomic", "once-cell", "option", "static", "lock"]

[lib]
name = "option_lock"
path = "src/lib.rs"

[features]
default = ["std"]
std = []
bench = ["criterion"]

[dependencies]
# should be a dev-dependency, but we only want it when running benches
# slows down builds the rest of the time
criterion = { version = "0.3", optional = true }

[[bench]]
name = "contention"
harness = false
required-features = ["bench"]

[[example]]
name = "atomic-wake"

[[example]]
name = "sync-results"

[[example]]
name = "try-mutex"
